--- a/home_automation/android/app/src/main/res/xml/network_security_config.xml
+++ b/home_automation/android/app/src/main/res/xml/network_security_config.xml
@@ -3,6 +3,8 @@
     <base-config cleartextTrafficPermitted="false" />
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">192.168.1.38</domain>
+        <domain includeSubdomains="true">192.168.1.33</domain>
+        <domain includeSubdomains="true">192.168.57.113</domain>
         <!-- Add any other IP addresses or domains that need cleartext traffic -->
     </domain-config>
 </network-security-config> 
